[tool.poetry]
name = "raven-tools"
version = "0.1.0"
description = "Tools to prepare raven input files for the Broye catchment"
license = "AGPL-3.0-or-later"
authors = ["Peter Zweifel <71866336+networkscientist@users.noreply.github.com>"]
readme = "README.md"
repository = "https://github.com/networkscientist/raven-tools"
keywords = ["raven", "hydrology"]

[tool.poetry.dependencies]
python = "^3.8.14"
sphinx-rtd-theme = "^1.0.0"
pylint = "^2.15.3"
pandas = "^1.5.0"
geopandas = "^0.11.1"
xarray = "^2022.9.0"
numpy = "^1.23.3"
Shapely = "^1.8.4"
netCDF4 = "^1.6.1"
pygeos = "^0.13"
pyet = "^1.1.0"
rioxarray = "^0.12.2"
PyYAML = "^6.0"
hydroeval = "^0.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
